fix spacing between title and content in sidebar block with simple content model

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -755,10 +755,11 @@
   font-size: calc(22.5 / var(--rem-base) * 1rem);
   font-weight: var(--alt-heading-font-weight);
   line-height: 1.3;
-  margin-bottom: -0.3em;
+  margin-bottom: 0.5rem;
   text-align: center;
 }
 
+.doc .sidebarblock > .content > .title + *,
 .doc .sidebarblock > .content > :not(.title):first-child {
   margin-top: 0;
 }
